[package]
name = "jardb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
config = "0.13.2"
poise = "0.4.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
serde_derive = "0.9.15"
yaml-rust = "0.4"
