[package]
name = "jardb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
poise = "0.4.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4"

serde_derive = "1.0"
