[package]
name = "jardb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
log = { version = "0.4.17", features = ["serde"] }
poise = "0.4.1"
reqwest = "0.11.12"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
yaml-rust = "0.4"
serde_derive = "1.0"
chrono = "0.4.24"
